# this-house-believes-in-vibes

./: .env.example  .gitignore  METHODOLOGY.md  README.md  pyproject.toml
data/speakers/: DATA_GUIDE.md
data/speakers/Allison Gardner/bio/: Allison Gardner.md  bio.md
data/speakers/Allison Gardner/interviews/: Allison Gardner on Artificial intelligence.md  Dr Allison Gardner Small Nudges Towards More Responsible AI.md  Transcript of Allison Gardner Diversity and gender bias in artificial intelligence.md
data/speakers/Demetrius Floudas/bio/: Demetrius Floudas.md  bio.md
data/speakers/Demetrius Floudas/writings/: Demetrius A. Floudas Advanced AI should be treated similar to Weapons of Mass Destruction.md
data/speakers/Fazl Barez/bio/: Fazl Barez.md  bio.md
data/speakers/Henry Shevlin/bio/: Henry Shelvin.md  bio.md
docs/: architecture.md  index.html  viz_data.json
export/: 01_single_run_first_ever.txt  02_single_run_second.txt  03_single_run_with_fixes.txt  04_ensemble1_run01.txt  05_ensemble1_run02.txt  06_ensemble1_run03.txt  07_ensemble1_run04.txt  08_ensemble1_run05.txt  09_ensemble2_run01.txt  10_ensemble2_run02.txt  11_ensemble2_run03.txt  12_ensemble2_run04.txt  13_ensemble2_run05.txt  14_ensemble2_run06.txt  15_ensemble2_run07.txt  16_ensemble3_run01.txt  17_ensemble3_run02.txt  18_ensemble3_run03.txt  19_ensemble3_run04.txt  20_ensemble3_run05.txt  21_ensemble3_run06.txt  22_ensemble3_run07.txt  23_ensemble3_run08.txt  24_ensemble3_run09.txt
src/: cluster.py  coaching.py  config.py  ensemble.py  graph.py  models.py  run.py
src/corpus/: ingest.py  youtube.py
src/debate/: judge.py  speech.py
src/persona/: builder.py
(+8 files in other folders)
